2007-12-10  Julian Lamb
	* src/gerbv.c,src/callbacks.c,others: Get basic layer management gui up
	  and running. This includes visibility toggling, color picking, and basic
	  row management using the buttons at the bottom. A popup menu will also
	  be added when the user right clicks.
	* src/gerber.c: Fix polygon rendering bug (bug #1190809). This was due
	  to the gerber parser not storing the correct polarity when closing
	  a polygon.

2007-12-09  Stuart Brorson (sdb@cloud9.net)
	* src/callbacks.c, src/drill.c, src/render.[hc],
	src/gerb_image.[hc], src/gerb_stats.[hc]:  Added 
	beginnings of statistics report for drill files.

2007-12-09  Julian Lamb
	* src/gerbv.c,src/callbacks.c: Reattach project open/save stuff in gui
	  and separate out some of the code back to gerbv.c.
	* gerbv.c,callbacks.c,interface.c,others: Implement export-to-file for
	  PNG, PDF, SVG, and PS. Start implementing print functionality. More
	  cleanup of old gui code. Move log handler over to new message textview
	  in the sidebar.
	  
2007-12-08  Julian Lamb
	* src/render.c,src/callbacks.c: Fix translation code for cairo renderer
	  so things are correctly centered on the screen after a zoom-to-fit. Fix
	  scaling code for MM unit drawings.
	* src/amacro.c,src/gerber.c: Fix error messages in amacro parsing (bug
	  #1845782) on FreeBSD systems (thanks to Joerg for the patch). Also, fix
	  possible hangs during amacro parsing (e.g. the file "%AM" would hang
	  gerbv, since it didn't correctly check for EOF).

2007-12-07  SDB
	* render.c, render.h, Many other files:  Started to refactor
	gerbv.  Also start to incorporate statistics gathering stuff
	into gerber.[hc].

2007-12-07  Julian Lamb
	* src/drill.c: Fix warning messages on some drill files (bug #1316247).
	  The drill parser did not zero out new gerbv_aperture_t structures, which
	  sometimes allowed junk in the param[x] portions, which confused the
	  parser and gave warnings and potentially incorrectly rendered drill
	  holes.
